@@ -141,7 +141,7 @@ CXXOPT=-GF -EHa
 
 DEFS=-DSTRICT -DWIN32 -D_WIN32 -D_MT -D__XYZZY__ -DPRIVCTRL_NODLL -DHAVE_DIMM_H -DDEBUG_GC
 !IF "$(VCVER)" == "8"
-CXX=cl -nologo -Zc:wchar_t- -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_WARNINGS
+CXX=cl -nologo -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_WARNINGS
 !ELSE
 CXX=cl -nologo
 !ENDIF
