@@ -311,10 +311,10 @@ StatusWindow::paint (const DRAWITEMSTRUCT *dis)
        b < be; b++)
     {
       SIZE sz;
-      GetTextExtentPoint32W (dis->hDC, b, 1, &sz);
+      GetTextExtentPoint32W (dis->hDC, (LPCWSTR)b, 1, &sz);
       r.right += sz.cx;
       ExtTextOutW (dis->hDC, x, y, ETO_CLIPPED | ETO_OPAQUE,
-                   &r, b, 1, 0);
+                   &r, (LPCWSTR)b, 1, 0);
       r.left = r.right;
       x += sz.cx;
     }
