@@ -1318,14 +1318,14 @@ PropSheetFont::find_font (const DLGTEMPLATE *tmpl)
   if (!(tmpl->style & DS_SETFONT))
     return;
   const WORD *w = (const WORD *)(tmpl + 1);
-  w += *w == 0xffff ? 2 : 1 + wcslen (w);
-  w += *w == 0xffff ? 2 : 1 + wcslen (w);
-  w += 1 + wcslen (w);
+  w += *w == 0xffff ? 2 : 1 + wcslen ((const wchar_t *)w);
+  w += *w == 0xffff ? 2 : 1 + wcslen ((const wchar_t *)w);
+  w += 1 + wcslen ((const wchar_t *)w);
   point = short (*w++);
-  int l = wcslen (w);
+  int l = wcslen ((const wchar_t *)w);
   if (l < LF_FACESIZE)
     {
-      wcscpy (face, w);
+      wcscpy (face, (const wchar_t *)w);
       face_len = l;
     }
 }
@@ -1370,13 +1370,13 @@ PropSheetFont::change_font (const DLGTEMPLATE *rtmpl, DWORD size)
   WORD *w = (WORD *)(tmpl + 1);
   const WORD *r0 = (const WORD *)(rtmpl + 1);
   const WORD *r = r0;
-  r += *r == 0xffff ? 2 : 1 + wcslen (r);
-  r += *r == 0xffff ? 2 : 1 + wcslen (r);
-  r += 1 + wcslen (r);
+  r += *r == 0xffff ? 2 : 1 + wcslen ((const wchar_t *)r);
+  r += *r == 0xffff ? 2 : 1 + wcslen ((const wchar_t *)r);
+  r += 1 + wcslen ((const wchar_t *)r);
   memcpy (w, r0, sizeof (WORD) * (r - r0));
   w += r - r0;
   if (rtmpl->style & DS_SETFONT)
-    r += 2 + wcslen (r + 1);
+    r += 2 + wcslen ((const wchar_t *)(r + 1));
   *w++ = PropSheetFont::point;
   memcpy (w, PropSheetFont::face, sizeof (WCHAR) * (PropSheetFont::face_len + 1));
   w += PropSheetFont::face_len + 1;
