@@ -1,5 +1,10 @@
 2009-12-16  NANRI Masaoki  <southly@gmail.com>
 
+	* src : remove compiler option '-Zc:wchar_t-'.
+	wchar_t をネイティブ型として扱うように修正。
+	gccではVCと異なりwchar_tのサイズが4なので修正すべきかどうかも不明。
+	とりあえずCスタイルのキャストで型を合わせることで対応している。
+
 	* src : remove compiler option '-Zc:forScope-'.
 	forループのスコープをC++の標準にしてもコンパイル可能なように修正。
 	必要な箇所だけ変数宣言をforループの前に出すのを基本方針にしている。
